--- a/index1-8.html
+++ b/index1-8.html
@@ -7,15 +7,15 @@
   </head>
   <body>
     <main>
-      <div class="list-box">
-        <p class="list">リスト1</p>
-        <p class="list">リスト2</p>
-        <p class="list">リスト3</p>
-        <p class="list">リスト4</p>
-        <p class="list">リスト5</p>
-        <p class="list">リスト6</p>
-        <p class="list">リスト7</p>
-      </div>
+      <ul class="list-box">
+        <li class="list">リスト1</li>
+        <li class="list">リスト2</li>
+        <li class="list">リスト3</li>
+        <li class="list">リスト4</li>
+        <li class="list">リスト5</li>
+        <li class="list">リスト6</li>
+        <li class="list">リスト7</li>
+      </ul>
       <div class="box-box">
         <div class="box"></div>
         <div class="box"></div>
